Updated README, formatted version string better.

--- a/prboom2/CMakeLists.txt
+++ b/prboom2/CMakeLists.txt
@@ -82,8 +82,8 @@ set(WAD_DATA "dsda-doom.wad")
 set(PACKAGE_VERSION "${PROJECT_VERSION}")
 set(PACKAGE_STRING "${PROJECT_NAME} ${PROJECT_VERSION}")
 
-set(UPSTREAM_PACKAGE_STRING "dsda-doom 0.27.5")
-set(PACKAGE_STRING_FULL "${PACKAGE_STRING} (based on ${UPSTREAM_PACKAGE_STRING})")
+set(UPSTREAM_PACKAGE_STRING "dsda-doom v0.27.5")
+set(PACKAGE_STRING_FULL "${PROJECT_NAME} v${PROJECT_VERSION} (based on ${UPSTREAM_PACKAGE_STRING})")
 
 include(CheckSymbolExists)
 
